--- a/sass/valueproposition.scss
+++ b/sass/valueproposition.scss
@@ -6,6 +6,9 @@
   overflow-x: hidden;
   margin-top: 30px;
   margin-bottom: 30px;
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-color: rgba(233, 233, 210, 0.692);
 
   .vp-container {
     display: flex;
