--- a/sass/aboutus.css
+++ b/sass/aboutus.css
@@ -7,18 +7,17 @@
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: start;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: start;
   padding: 50px;
   background-color: #dde5ed;
 }
 
 .about-us .about-head {
-  width: 90%;
   margin-bottom: 40px;
 }
 
@@ -27,7 +26,7 @@
 }
 
 .about-us .about-col-holder p {
-  width: 100%;
+  max-width: 100%;
 }
 
 .about-us .about-subhead {
@@ -37,7 +36,7 @@
 }
 
 /* Custom, iPhone Retina */
-@media only screen and (max-width: 320px) {
+@media only screen and (min-width: 320px) {
   .about-col-holder {
     width: 100%;
   }
@@ -47,7 +46,7 @@
 }
 
 /* Extra Small Devices, Phones */
-@media only screen and (max-width: 480px) {
+@media only screen and (min-width: 480px) {
   .about-col-holder {
     width: 100%;
   }
