--- a/sass/problemoutline.css
+++ b/sass/problemoutline.css
@@ -14,6 +14,9 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  padding-top: 50px;
+  padding-bottom: 50px;
+  background-color: #d6eef1;
 }
 
 .problem-outline .col {
