--- a/sass/problemoutline.scss
+++ b/sass/problemoutline.scss
@@ -7,6 +7,9 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  padding-top: 50px;
+  padding-bottom: 50px;
+  background-color: rgb(214, 238, 241);
 
   .col{
     display: flex;
