--- a/sass/services.css
+++ b/sass/services.css
@@ -1,12 +1,12 @@
 @import url("https://fonts.googleapis.com/css2?family=Arimo&family=Dancing+Script&family=Exo+2:wght@800&family=Fira+Code:wght@300&family=Jura:wght@300;400&family=Montserrat:wght@200;400&display=swap");
 .services-outline {
   padding-top: 60px;
-  background-image: url("../images/background-wave-service.svg");
-  background-size: cover;
+  margin-top: 10px;
+  padding-left: 0;
+  padding-right: 0;
 }
 
 .services-outline .section-header-service {
-  padding-bottom: 60px;
   padding-left: 100px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -62,5 +62,44 @@
 .services-outline .service-ads .workshops-service {
   max-width: 400px;
   margin: 10px;
+}
+
+.service-item {
+  min-height: 100vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.service-item-text {
+  text-align: justify;
+}
+
+.jobhunting {
+  background-color: #f7f5f5;
+  padding-left: 10%;
+  padding-right: 10%;
+}
+
+.workshops {
+  background-color: antiquewhite;
+  padding-left: 10%;
+  padding-right: 10%;
+}
+
+.schoolytics {
+  background-color: #ecffeb;
+  padding-left: 10%;
+  padding-right: 10%;
 }
 /*# sourceMappingURL=services.css.map */
