--- a/sass/training.css
+++ b/sass/training.css
@@ -16,6 +16,15 @@
   min-height: 100vh;
   margin-top: 40px;
   margin-bottom: 40px;
+  padding-top: 40px;
+  padding-bottom: 40px;
+  background: #fdfef9;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  -webkit-box-shadow: 0 15px 25px rgba(0, 0, 0, 0.6);
+          box-shadow: 0 15px 25px rgba(0, 0, 0, 0.6);
+  border-radius: 10px;
+  max-width: 80%;
 }
 
 .training .col {
