--- a/sass/training.scss
+++ b/sass/training.scss
@@ -10,6 +10,14 @@
   min-height: 100vh;
   margin-top: 40px;
   margin-bottom: 40px;
+  padding-top: 40px;
+  padding-bottom: 40px;
+
+  background: rgb(253, 254, 249);
+  box-sizing: border-box;
+  box-shadow: 0 15px 25px rgba(0, 0, 0, 0.6);
+  border-radius: 10px;
+  max-width: 80%;
 
   .col {
     text-align: justify;
