updates to landing page and no media querries

--- a/sass/aboutus.css
+++ b/sass/aboutus.css
@@ -13,7 +13,7 @@
   -webkit-box-align: start;
       -ms-flex-align: start;
           align-items: start;
-  padding: 50px;
+  padding: 10%;
   background-color: #dde5ed;
 }
 
