--- a/sass/aboutus.scss
+++ b/sass/aboutus.scss
@@ -5,7 +5,7 @@
   flex-direction: column;
   justify-content: start;
   align-items: start;
-  padding: 50px;
+  padding: 10%;
 
   background-color: rgb(221, 229, 237);
   .about-head {
