--- a/sass/problemoutline.css
+++ b/sass/problemoutline.css
@@ -16,7 +16,6 @@
           align-items: center;
   padding-top: 50px;
   padding-bottom: 50px;
-  background-color: #d6eef1;
 }
 
 .problem-outline .col {
@@ -36,18 +35,14 @@
 }
 
 .problem-outline .problem {
-  min-height: 500px;
-  max-width: 300px;
-  border-radius: 2rem;
+  min-height: 600px;
+  max-width: 350px;
 }
 
 .problem-outline .problem .thumbnail {
   height: 200px;
   max-height: 200px;
   overflow: hidden;
-  border-top-left-radius: 2rem;
-  border-top-right-radius: 2rem;
-  background-color: #19C17E;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -59,11 +54,51 @@
           align-items: center;
   text-align: center;
   padding: 10px;
+  color: #FFFFFF;
 }
 
 .problem-outline .problem .thumbnail .decorated {
   font-family: "Dancing Script", cursive !important;
   text-align: center !important;
-  padding: 10px auto;
+  padding: 15% auto;
+}
+
+.problem-outline .problem-1 {
+  background-image: url("../images/homesplash.jpg");
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+.problem-outline .problem-2 {
+  background-image: url("../images/bizwoman.jpg");
+  background-position: center;
+  background-size: contain;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+.problem-outline .problem-3 {
+  background-image: url("../images/schoolboy.jpg");
+  background-position: center;
+  background-size: contain;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+.problem-outline .card-body {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 /*# sourceMappingURL=problemoutline.css.map */
