--- a/sass/problemoutline.scss
+++ b/sass/problemoutline.scss
@@ -1,4 +1,3 @@
-
 @import "variables";
 
 .problem-outline {
@@ -9,38 +8,71 @@
   align-items: center;
   padding-top: 50px;
   padding-bottom: 50px;
-  background-color: rgb(214, 238, 241);
 
-  .col{
+  .col {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center; 
+    align-items: center;
   }
 
   .problem {
-    min-height: 500px;
-    max-width: 300px;
-    border-radius: 2rem;
+    min-height: 600px;
+    max-width: 350px;
 
     .thumbnail {
       height: 200px;
       max-height: 200px;
-      overflow: hidden;
-      border-top-left-radius: 2rem;
-      border-top-right-radius: 2rem;
-      background-color: $color-accent;
+      overflow: hidden; 
       display: flex;
       justify-content: center;
       align-items: center;
       text-align: center;
       padding: 10px;
+      color: $color-white;
 
-      .decorated{
+      .decorated {
         font-family: $ds-font-family !important;
-        text-align: center !important; 
-        padding: 10px auto;
+        text-align: center !important;
+        padding: 15% auto;
       }
     }
+
+    
   }
+
+
+
+.problem-1 {
+  background-image: url("../images/homesplash.jpg");
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+.problem-2 {
+  background-image: url("../images/bizwoman.jpg");
+  background-position: center;
+  background-size: contain;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+//linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5))
+.problem-3 {
+  background-image: url("../images/schoolboy.jpg");
+  background-position: center;
+  background-size: contain;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+.card-body {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+}
+
+
+
 }
