--- a/sass/valueproposition.css
+++ b/sass/valueproposition.css
@@ -8,6 +8,10 @@
   padding-top: 30px;
   padding-bottom: 30px;
   background-color: rgba(233, 233, 210, 0.692);
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  -webkit-box-shadow: 0 15px 25px rgba(0, 0, 0, 0.6);
+          box-shadow: 0 15px 25px rgba(0, 0, 0, 0.6);
 }
 
 .value-proposition .vp-container {
