--- a/sass/valueproposition.scss
+++ b/sass/valueproposition.scss
@@ -9,6 +9,8 @@
   padding-top: 30px;
   padding-bottom: 30px;
   background-color: rgba(233, 233, 210, 0.692);
+  box-sizing: border-box;
+  box-shadow: 0 15px 25px rgba(0, 0, 0, 0.6);
 
   .vp-container {
     display: flex;
